# mcl-observer-runtime

./: .gitignore  LICENSE  MANIFEST.in  MANIFEST.json  README.md  pyproject.toml  setup.cfg
docs/: LLM_HANDOFF.md  USAGE.md
examples/: desync_demo.py  llm_monitor_example.py  procedural_check.py
mcl_sdk/: __init__.py  analyze.py  drift_monitor.py  encoders.py  llm_adapter.py  mcl_kernel.py  procedural_triage.py  separability_engine.py  simulation.py  sir_runtime.py  sir_schema.json  utils.py
tests/: test_sdk.py
