[metadata]
name = mcl-observer-runtime
version = 1.0.0
author = Daniel Dillberg
author_email = bigdilly95@gmail.com
license = AGPL-3.0-or-later
license_files = LICENSE
description = Observer-relative structure diagnostics: divergence detection, content triage, trajectory drift
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Topic :: Software Development :: Quality Assurance

[options]
packages = mcl_sdk
python_requires = >=3.9
include_package_data = True

[options.package_data]
mcl_sdk = sir_schema.json
